--- a/fitnessApp/css/style.css
+++ b/fitnessApp/css/style.css
@@ -1,12 +1,6 @@
-/*
-  Template Name: SoftLand
-  Template URL: https://bootstrapmade.com/softland-bootstrap-app-landing-page-template/
-  Author: BootstrapMade.com
-  Author URL: https://bootstrapmade.com/
-*/
 
 /*--------------------------------------------------------------
-# General
+# General Style
 --------------------------------------------------------------*/
 
 html {
